test: some tests were performed with postman fix: some inaccuracies have been corrected
