# src/controllers/category.js
@@ -12,12 +12,12 @@ module.exports = {
             #swagger.summary = "List Categories"
             #swagger.description = `
                 You can send query with endpoint for filter[], search[], sort[], page and limit.
-            <ul> Examples:
-                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
-                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
-                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
-                <li>URL/?<b>page=2&limit=1</b></li>
-            </ul>
+                <ul> Examples:
+                    <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
             `
         */
 
@@ -39,7 +39,7 @@ module.exports = {
                 in: 'body',
                 required: true,
                 schema: {
-                $ref"#/definitions/Category"
+                    $ref:"#/definitions/Category"
                     }
                 }
             */
@@ -74,7 +74,7 @@ module.exports = {
                     in: 'body',
                     required: true,
                     schema: {
-                    $ref"#/definitions/Category"
+                        $ref:"#/definitions/Category"
                     }
                 }
             */
